# PROJECT-VIDEO-STUDIO

./: .clinerules  .editorconfig  .env.example  .gitignore  Dockerfile.frontend  PROJECT_SPEC.md  README.md  TASKS.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quality-check.bat  quality-check.sh  requirements.txt
src/backend/: .eslintrc.json  Dockerfile  alembic.ini  docs  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 001_initial_schema.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: dependencies.py  router.py
src/backend/app/core/: __init__.py  config.py  events.py  exceptions.py  logging.py  middleware.py  security.py
src/backend/app/models/: __init__.py  base.py  batch.py  branding.py  chat.py  dubbing.py  project.py  render_task.py  subtitle.py  transcript.py  translation.py  video.py  voice_profile.py  youtube_metadata.py
src/backend/app/schemas/: __init__.py  batch.py  branding.py  chat.py  common.py  dubbing.py  project.py  render.py  subtitle.py  transcript.py  translation.py  video.py  voice.py  youtube.py
src/backend/app/services/: batch_service.py  branding_service.py  branding_template_service.py  chat_service.py  file_service.py  project_service.py  render_service.py  stt_service.py  subtitle_service.py  translation_service.py  tts_service.py  video_service.py  youtube_service.py
src/backend/app/tasks/: __init__.py  base.py  batch_task.py  celery_app.py  download_task.py  render_task.py  stt_task.py  translation_task.py  tts_task.py
src/backend/app/utils/: __init__.py  audio_utils.py  ffmpeg.py  file_utils.py  srt_utils.py
src/backend/scripts/: __init__.py  seed_data.py
src/backend/tests/: conftest.py
(+95 files in other folders)
